<resources>
    <string name="app_name">CenecMayhem</string>
    <string name="camposDebenEstarRellenos">Todos los campos deben estar rellenos</string>
    <string name="contraseñasNoCoinciden">Las contraseñas introducidas deben ser iguales</string>
    <string name="registroNoCompletado">No se ha podido completar el registro</string>
    <string name="registroCompletado">Registro completado con éxito</string>
    <string name="heOlvidadoLaContraseña">He olvidado la contraseña</string>
    <string name="usuarioOContraselaIncorrecto">Usuario o contraseña incorrectos</string>
    <string name="noTeConvence">¿No te convence ninguna de las partidas?</string>
    <string name="creaLaTuyaPropia"><u>¡Crea la tuya propia!</u>></string>
    <string name="ponle_un_nombre">Ponle un <font color='#FF1616'>nombre</font></string>
    <string name="dale_una_descripcion">Dale una <font color='#FF1616'>descripcion</font></string>
    <string name="ser_p_blica">¿Será <font color='#FF1616'>pública</font>?</string>
    <string name="reg_strate"><u>¡Regístrate!</u></string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="lodo_de_aplicaci_n">Lodo de aplicación</string>
    <string name="contrasena_debil">La contraseña es demasiado débil</string>
    <string name="error_desconocido">Ha habido un error desconocido, intentelo de nuevo</string>
    <string name="email_no_valido">El formato del email no es válido</string>
    <string name="email_repetido">El email ya pertenece a otra cuenta</string>
    <string name="cenec">Cenec</string>
    <string name="mayhem">Mayhem</string>
    <string name="info_juego_cenecmayhem">Prueba la experiencia original de Cenec Mayhem, donde podrás jugar con los personajes de la academia.</string>
    <string name="partidas">Partidas</string>
    <string name="personalizadas">personalizadas</string>
    <string name="info_juego_personalizadas">Prueba las partidas creadas por tí o por otros miembros de la comunidad, con sus personajes personalizados y únicos</string>
    <string name="nombre">Nombre</string>
    <string name="_0">0</string>
    <string name="bot_n_para_acceder_a_la_tienda">Botón para acceder a la tienda</string>
    <string name="enemigo_derrotado">Enemigo derrotado</string>
    <string name="bebe_una_poci_n">!Bebe una poción!</string>
    <string name="luchar">Luchar</string>
    <string name="icono_de_dinero">Icono de dinero</string>
    <string name="icono_de_poci_n">Icono de poción</string>
    <string name="icono_de_vida">Icono de vida</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="bot_n_de_salida">Botón de salida</string>
    <string name="icono_de_prueba">Icono de prueba</string>
    <string name="creador">Creador</string>
    <string name="creado_por">Creado por:</string>
    <string name="bot_n_de_comprar">Botón de comprar</string>
    <string name="boton_para_ir_a_ronda">Boton para ir a Ronda</string>
    <string name="icono_dinero">icono dinero</string>
    <string name="icono_pociones">icono pociones</string>
    <string name="poci_n">Poción</string>
    <string name="_300">300</string>
    <string name="icono_comprar">Icono comprar</string>
    <string name="personajes">Personajes</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">Usuario</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="crea_tu_propia">Crea tu propia</string>
    <string name="partida">partida</string>
    <string name="continuar">Continuar</string>
    <string name="ponle_un_nombre_reconocible_y_atractivo">¡Ponle un nombre reconocible y atractivo!</string>
    <string name="escribe_una_breve_descripci_n_de_tu_partida_para_los_dem_s_usuarios">Escribe una breve descripción de tu partida para los demás usuarios.</string>
    <string name="los_dem_s_usuarios_podr_n_utilizar_esta_partida_sin_que_la_compartas">Los demás usuarios podrán utilizar esta partida sin que la compartas.</string>
    <string name="p_blica">Pública</string>
    <string name="crea_tus">Crea tus</string>
    <string name="personajes_">personajes</string>
    <string name="_1">1</string>
    <string name="_4">/4</string>
    <string name="fuerza">Fuerza</string>
    <string name="probabilidad">Probabilidad</string>
    <string name="mensaje_de_ataque">Mensaje de ataque</string>
    <string name="a_adir_ataque">Añadir ataque</string>
    <string name="a_adir_personaje">Añadir personaje</string>
    <string name="finalizar">Finalizar</string>
    <string name="ataques">Ataques</string>
    <string name="precio">Precio</string>
    <string name="icono_de_personaje">Icono de personaje</string>

</resources>