<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ronda">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="150dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ron_nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/nombre"
            android:textColor="@color/yellowCM"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:contentDescription="@string/lodo_de_aplicaci_n"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo_largo" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/veryLightGreyCM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"

            android:contentDescription="@string/icono_de_dinero"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/moneda" />

        <TextView
            android:id="@+id/ron_infoMonedas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_0"
            android:textColor="@color/blackCM"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icono_de_poci_n"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/ron_infoPociones"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/pocion" />

        <TextView
            android:id="@+id/ron_infoPociones"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_0"
            android:textColor="@color/blackCM"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/icono_de_vida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/corazon" />

        <TextView
            android:id="@+id/ron_infoVida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_0"
            android:textColor="@color/blackCM"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageButton
            android:id="@+id/ron_btnTienda"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/bot_n_para_acceder_a_la_tienda"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tienda_boton"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ron_imgEnemigo1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/enemigo_derrotado"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/ron_imgEnemigo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/close_icon"
        app:tint="@color/lightGreyCM"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/ron_imgEnemigo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/enemigo_derrotado"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/ron_imgEnemigo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ron_imgEnemigo1"
        app:srcCompat="@drawable/close_icon"
        app:tint="@color/lightGreyCM"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ron_imgEnemigo3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/enemigo_derrotado"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/ron_btnLuchar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ron_imgEnemigo2"
        app:srcCompat="@drawable/close_icon"
        app:tint="@color/lightGreyCM"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/ron_btnLuchar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/luchar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ron_imgEnemigo3"
        app:layout_constraintStart_toStartOf="@+id/ron_imgEnemigo3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ron_btnBeberPocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/bebe_una_poci_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pocion" />

</androidx.constraintlayout.widget.ConstraintLayout>