<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cenecMayhem.Batalla">

    <ImageButton
        android:id="@+id/bat_btnSalir"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_de_salida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/veryLightGreyCM"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bat_btnAtaque1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/ejemplo"
            app:layout_constraintBottom_toTopOf="@+id/bat_btnAtaque3"
            app:layout_constraintEnd_toStartOf="@+id/bat_btnAtaque2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/bat_btnAtaque2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/ejemplo"
            app:layout_constraintBottom_toTopOf="@+id/bat_btnAtaque4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bat_btnAtaque1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/bat_btnAtaque3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/ejemplo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bat_btnAtaque4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bat_btnAtaque1"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/bat_btnAtaque4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/ejemplo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bat_btnAtaque3"
            app:layout_constraintTop_toBottomOf="@+id/bat_btnAtaque2"
            tools:ignore="TextContrastCheck,TextContrastCheck" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/bat_imgEnemigo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icono_de_prueba"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/bat_mensajes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit" />

    <ImageView
        android:id="@+id/bat_imgPersonaje"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/icono_de_prueba"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bat_mensajes"
        app:srcCompat="@drawable/exit" />

    <LinearLayout
        android:id="@+id/bat_mensajes"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/veryLightGreyCM"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bat_imgPersonaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bat_imgEnemigo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bat_txtMensajeEnemigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/blackCM"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bat_txtMensajeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/blackCM"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/bat_vidaEnemigo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:progressBackgroundTint="@color/lightGreyCM"
        android:progressTint="@color/yellowCM"
        android:scaleX="-1"
        android:scaleY="2.5"
        android:scrollbarFadeDuration="5000"
        app:layout_constraintEnd_toEndOf="@+id/bat_imgEnemigo"
        app:layout_constraintTop_toTopOf="@+id/bat_imgEnemigo" />

    <ProgressBar
        android:id="@+id/bat_vidaPersonaje"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:scaleY="2.5"
        android:max="100"
        android:min="0"
        android:scrollbarFadeDuration="-2000"
        android:progressBackgroundTint="@color/lightGreyCM"
        android:progressTint="@color/yellowCM"
        app:layout_constraintBottom_toBottomOf="@+id/bat_imgPersonaje"
        app:layout_constraintStart_toStartOf="@+id/bat_imgPersonaje" />

    <TextView
        android:id="@+id/bat_nombreEnemigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ejemplo"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bat_imgEnemigo"
        app:layout_constraintTop_toBottomOf="@+id/bat_vidaEnemigo" />

    <TextView
        android:id="@+id/bat_nombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ejemplo"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bat_vidaPersonaje"
        app:layout_constraintStart_toEndOf="@+id/bat_imgPersonaje" />

    <TextView
        android:id="@+id/bat_contDañoPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:textColor="@color/redCM"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/bat_imgPersonaje"
        app:layout_constraintTop_toTopOf="@+id/bat_imgPersonaje" />

    <TextView
        android:id="@+id/bat_contDañoEnemigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/redCM"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bat_imgEnemigo"
        app:layout_constraintEnd_toStartOf="@+id/bat_imgEnemigo" />

</androidx.constraintlayout.widget.ConstraintLayout>